--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
 <head>
   <title>contact</title>
-  <link rel="stylesheet" href="css/main_style.css">
+  <link rel="stylesheet" href="main_style.css">
 </head>
 <body>
        <style>
