--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
 
 <head>
   <title>Menus</title>
-  <link rel="stylesheet" href="css/main_style.css">
+  <link rel="stylesheet" href="main_style.css">
 </head>
 
 <body>
